--- a/src/main/resources/com/example/a_star/main-view.fxml
+++ b/src/main/resources/com/example/a_star/main-view.fxml
@@ -4,48 +4,38 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.a_star.MainViewController">
-   <children>
-      <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <MenuBar>
-              <menus>
-                <Menu mnemonicParsing="false" text="File">
-                  <items>
-                        <MenuItem fx:id="fileChooseButton" mnemonicParsing="false" onAction="#chooseFile" text="Load graph from file" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Edit">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Сlean the surface" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Help">
-                  <items>
-                    <MenuItem mnemonicParsing="false" onAction="#openAboutWindow" text="About" />
-                  </items>
-                </Menu>
-              </menus>
-            </MenuBar>
-            <HBox prefHeight="25.0" prefWidth="600.0">
-               <children>
-                  <ChoiceBox fx:id="actions" prefHeight="24.0" prefWidth="195.0" />
-                  <ChoiceBox fx:id="heuristics" prefHeight="24.0" prefWidth="216.0" />
-                  <Button fx:id="runButton" mnemonicParsing="false" prefHeight="24.0" prefWidth="71.0" text="Run" />
-                  <Button mnemonicParsing="false" prefHeight="24.0" prefWidth="89.0" text="End alg" />
-               </children>
-            </HBox>
-            <StackPane prefHeight="39.0" prefWidth="600.0">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Информация для пользователя">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Text>
-               </children>
-            </StackPane>
-            <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" />
-         </children>
-      </VBox>
-   </children>
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.a_star.MainViewController">
+    <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+          AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <MenuBar>
+            <Menu mnemonicParsing="false" text="File">
+                <MenuItem fx:id="fileChooseButton" mnemonicParsing="false" onAction="#chooseFile"
+                          text="Load graph from file"/>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Edit">
+                <MenuItem mnemonicParsing="false" text="Clear the surface" onAction="#clear"/>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Help">
+                <MenuItem mnemonicParsing="false" onAction="#openAboutWindow" text="About"/>
+            </Menu>
+        </MenuBar>
+        <HBox alignment="CENTER" prefHeight="25.0" prefWidth="600.0">
+            <ChoiceBox fx:id="actions" prefHeight="24.0" prefWidth="195.0"/>
+            <ChoiceBox fx:id="heuristics" prefHeight="24.0" prefWidth="216.0"/>
+            <Button fx:id="runButton" mnemonicParsing="false" prefHeight="24.0" prefWidth="71.0" text="Run"/>
+            <Button mnemonicParsing="false" prefHeight="24.0" prefWidth="89.0" text="End alg"/>
+        </HBox>
+        <StackPane prefHeight="39.0" prefWidth="1000.0">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Информация для пользователя">
+                <font>
+                    <Font size="20.0"/>
+                </font>
+            </Text>
+        </StackPane>
+        <Pane fx:id="canvasPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+              prefHeight="1000.0" prefWidth="400.0" onMouseClicked="#onCanvasClick"
+              style="-fx-background-color: #cccc99;"/>
+    </VBox>
 </AnchorPane>
