--- a/src/main/resources/com/example/a_star/main-view.fxml
+++ b/src/main/resources/com/example/a_star/main-view.fxml
@@ -4,38 +4,33 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.a_star.MainViewController">
-    <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-          AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.a_star.MainViewController">
+    <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <MenuBar>
             <Menu mnemonicParsing="false" text="File">
-                <MenuItem fx:id="fileChooseButton" mnemonicParsing="false" onAction="#chooseFile"
-                          text="Load graph from file"/>
+                <MenuItem fx:id="fileChooseButton" mnemonicParsing="false" onAction="#chooseFile" text="Load graph from txt file" />
+            <MenuItem fx:id="saveFileButton" mnemonicParsing="false" onAction="#saveFile" text="Save graph to txt file" />
             </Menu>
             <Menu mnemonicParsing="false" text="Edit">
-                <MenuItem mnemonicParsing="false" text="Clear the surface" onAction="#clear"/>
+                <MenuItem mnemonicParsing="false" onAction="#clear" text="Clear the surface" />
             </Menu>
             <Menu mnemonicParsing="false" text="Help">
-                <MenuItem mnemonicParsing="false" onAction="#openAboutWindow" text="About"/>
+                <MenuItem mnemonicParsing="false" onAction="#openAboutWindow" text="About" />
             </Menu>
         </MenuBar>
         <HBox alignment="CENTER" prefHeight="25.0" prefWidth="600.0">
-            <ChoiceBox fx:id="actions" prefHeight="24.0" prefWidth="195.0"/>
-            <ChoiceBox fx:id="heuristics" prefHeight="24.0" prefWidth="216.0"/>
-            <Button fx:id="runButton" mnemonicParsing="false" prefHeight="24.0" prefWidth="71.0" text="Run"/>
-            <Button mnemonicParsing="false" prefHeight="24.0" prefWidth="89.0" text="End alg"/>
+            <ChoiceBox fx:id="actions" prefHeight="24.0" prefWidth="195.0" />
+            <ChoiceBox fx:id="heuristics" prefHeight="24.0" prefWidth="216.0" />
+            <Button fx:id="runButton" mnemonicParsing="false" prefHeight="24.0" prefWidth="71.0" text="Run" />
+            <Button mnemonicParsing="false" prefHeight="24.0" prefWidth="89.0" text="End alg" />
         </HBox>
         <StackPane prefHeight="39.0" prefWidth="1000.0">
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Информация для пользователя">
                 <font>
-                    <Font size="20.0"/>
+                    <Font size="20.0" />
                 </font>
             </Text>
         </StackPane>
-        <Pane fx:id="canvasPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-              prefHeight="1000.0" prefWidth="400.0" onMouseClicked="#onCanvasClick"
-              style="-fx-background-color: #cccc99;"/>
+        <Pane fx:id="canvasPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#onCanvasClick" prefHeight="1000.0" prefWidth="400.0" style="-fx-background-color: #cccc99;" />
     </VBox>
 </AnchorPane>
