Code refactoring + input exceptions handling

--- a/src/main/resources/com/example/a_star/about-view.fxml
+++ b/src/main/resources/com/example/a_star/about-view.fxml
@@ -4,19 +4,20 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.a_star.About">
-   <children>
-      <ScrollPane fitToWidth="true" prefHeight="480.0" prefWidth="440.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <content>
-            <TextFlow maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="400.0" textAlignment="CENTER" AnchorPane.bottomAnchor="94.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                <children>
-                    <Text lineSpacing="2.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ВИЗУАЛИЗАТОР АЛГОРИТМА А*&#10;Приложение запускает алгоритм для заданного ориентированного взвешенного графа и находит кратчайший путь из вершины А в В, а также его длину.&#10;&#10;Вам нужно найти кратчайший путь в графе из вершины A в вершину B?&#10;&#10;Тогда, задайте граф одним из двух способов:&#10;а) Кликая по окну, выбирая необходимые действия: создать вершину, соединить вершины, удалить вершину.&#10;б) Импортировать граф из файла, в котором должны содержаться следующие сведения о графе:&#10;~количество вершин в графе&#10;~координаты вершин графа&#10;~матрица смежности графа с весами&#10;Далее, выберете эвристику, которая будет использоваться в алгоритме А*:&#10;а) Расстояние Чебышева&#10;б) Манхэттенская метрика&#10;в) Евклидово расстояние&#10;Нажмите кнопку Run для запуска алгоритма.&#10;Выберете начальную и конечную вершину пути.&#10;Алгоритм запущен.&#10;Вы можете ставить процесс работы алгоритма на паузу, а также переходить к следующему шагу работы алгоритма.&#10;&#10;В результате вы получите кратчайший путь из А в В, а также длину этого пути.&#10;Получившийся граф вместе с результатами вы также можете вывести в текстовый файл." wrappingWidth="600.5029296875">
-                        <font>
-                            <Font size="14.0" />
-                        </font></Text>
-                </children>
-            </TextFlow>
-        </content>
-      </ScrollPane>
-   </children>
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="400.0"
+            xmlns="http://javafx.com/javafx/16">
+    <ScrollPane fitToWidth="true" prefHeight="480.0" prefWidth="440.0" AnchorPane.bottomAnchor="0.0"
+                AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <TextFlow maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0"
+                  prefWidth="400.0" textAlignment="CENTER" AnchorPane.bottomAnchor="94.0"
+                  AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <Text lineSpacing="2.0" strokeType="OUTSIDE" strokeWidth="0.0"
+                  text="ВИЗУАЛИЗАТОР АЛГОРИТМА А*&#10;Приложение запускает алгоритм для заданного ориентированного взвешенного графа и находит кратчайший путь из вершины А в В, а также его длину.&#10;&#10;Вам нужно найти кратчайший путь в графе из вершины A в вершину B?&#10;&#10;Тогда, задайте граф одним из двух способов:&#10;а) Кликая по окну, выбирая необходимые действия: создать вершину, соединить вершины, удалить вершину.&#10;б) Импортировать граф из файла, в котором должны содержаться следующие сведения о графе:&#10;~количество вершин в графе&#10;~координаты вершин графа&#10;~матрица смежности графа с весами&#10;Далее, выберете эвристику, которая будет использоваться в алгоритме А*:&#10;а) Расстояние Чебышева&#10;б) Манхэттенская метрика&#10;в) Евклидово расстояние&#10;Нажмите кнопку Run для запуска алгоритма.&#10;Выберете начальную и конечную вершину пути.&#10;Алгоритм запущен.&#10;Вы можете ставить процесс работы алгоритма на паузу, а также переходить к следующему шагу работы алгоритма.&#10;&#10;В результате вы получите кратчайший путь из А в В, а также длину этого пути.&#10;Получившийся граф вместе с результатами вы также можете вывести в текстовый файл."
+                  wrappingWidth="600.5029296875">
+                <font>
+                    <Font size="14.0"/>
+                </font>
+            </Text>
+        </TextFlow>
+    </ScrollPane>
 </AnchorPane>
