--- a/src/main/resources/com/example/a_star/main-view.fxml
+++ b/src/main/resources/com/example/a_star/main-view.fxml
@@ -19,18 +19,19 @@
             </Menu>
         </MenuBar>
         <HBox alignment="CENTER" prefHeight="25.0" prefWidth="600.0">
-            <ChoiceBox fx:id="actions" onAction="#chooseButtonActionsClicked" prefHeight="24.0" prefWidth="195.0" />
-            <ChoiceBox fx:id="heuristics" onAction="#chooseButtonHeuriscticClicked" prefHeight="24.0" prefWidth="216.0" />
+            <ChoiceBox fx:id="actions" prefHeight="24.0" prefWidth="195.0" />
+            <ChoiceBox fx:id="heuristics" prefHeight="24.0" prefWidth="216.0" />
             <Button fx:id="runAlgButton" disable="true" mnemonicParsing="false" onMouseClicked="#run" prefHeight="24.0" prefWidth="71.0" text="Run" />
             <Button fx:id="endAlgButton" disable="true" mnemonicParsing="false" onAction="#endAlg" prefHeight="24.0" prefWidth="89.0" text="End alg" />
         </HBox>
-      <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0">
-         <children>
-               <Button fx:id="prevStepButton" disable="true" mnemonicParsing="false" onAction="#prevStep" prefHeight="24.0" prefWidth="64.0" text="Prev" />
-               <Button fx:id="pauseAlgButton" disable="true" mnemonicParsing="false" onAction="#pauseAlg" prefHeight="24.0" prefWidth="64.0" text="Pause" />
-               <Button fx:id="nextStepButton" disable="true" mnemonicParsing="false" onAction="#nextStep" prefHeight="24.0" prefWidth="64.0" text="Next" />
-         </children>
-      </HBox>
+        <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0">
+            <Button fx:id="prevStepButton" disable="true" mnemonicParsing="false" onAction="#prevStep" prefHeight="24.0"
+                    prefWidth="64.0" text="Prev"/>
+            <Button fx:id="pauseAlgButton" disable="true" mnemonicParsing="false" onAction="#pauseAlg" prefHeight="24.0"
+                    prefWidth="64.0" text="Pause"/>
+            <Button fx:id="nextStepButton" disable="true" mnemonicParsing="false" onAction="#nextStep" prefHeight="24.0"
+                    prefWidth="64.0" text="Next"/>
+        </HBox>
         <HBox alignment="CENTER" prefHeight="39.0" prefWidth="1000.0">
             <Text fx:id="info" strokeType="OUTSIDE" strokeWidth="0.0" text="Информация для пользователя">
                 <font>
