--- a/src/main/resources/com/example/a_star/about-view.fxml
+++ b/src/main/resources/com/example/a_star/about-view.fxml
@@ -4,8 +4,10 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="400.0"
-            xmlns="http://javafx.com/javafx/16">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+            prefHeight="400.0" prefWidth="400.0"
+            xmlns="http://javafx.com/javafx/16"
+            stylesheets="@styles.css">
     <ScrollPane fitToWidth="true" prefHeight="480.0" prefWidth="440.0" AnchorPane.bottomAnchor="0.0"
                 AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <TextFlow maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0"
