--- a/src/main/resources/com/example/a_star/main-view.fxml
+++ b/src/main/resources/com/example/a_star/main-view.fxml
@@ -4,12 +4,10 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="400.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
+<AnchorPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.example.a_star.MainViewController"
             stylesheets="@styles.css">
-    <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+    <VBox styleClass="window" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <MenuBar>
             <Menu mnemonicParsing="false" text="File">
                 <MenuItem fx:id="readFileButton" mnemonicParsing="false" onAction="#chooseFile" text="Load graph from txt file" />
@@ -22,27 +20,22 @@
                 <MenuItem mnemonicParsing="false" onAction="#openAboutWindow" text="About" />
             </Menu>
         </MenuBar>
-        <HBox alignment="CENTER" prefHeight="25.0" prefWidth="600.0">
-            <ChoiceBox fx:id="actions" prefHeight="24.0" prefWidth="195.0" />
-            <ChoiceBox fx:id="heuristics" prefHeight="24.0" prefWidth="216.0" />
-            <Button fx:id="runAlgButton" disable="true" mnemonicParsing="false" onMouseClicked="#run" prefHeight="24.0" prefWidth="71.0" text="Run" />
-            <Button fx:id="endAlgButton" disable="true" mnemonicParsing="false" onAction="#endAlg" prefHeight="24.0" prefWidth="89.0" text="End alg" />
+        <HBox id="menuButtonsBox">
+            <ChoiceBox fx:id="actions"/>
+            <ChoiceBox fx:id="heuristics"/>
+            <Button fx:id="runAlgButton" disable="true" mnemonicParsing="false" onMouseClicked="#run" text="Run" />
+            <Button fx:id="endAlgButton" disable="true" mnemonicParsing="false" onAction="#endAlg" text="End alg" />
         </HBox>
-        <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0">
-            <Button fx:id="prevStepButton" disable="true" mnemonicParsing="false" onAction="#prevStep" prefHeight="24.0"
-                    prefWidth="64.0" text="Prev"/>
-            <Button fx:id="pauseAlgButton" disable="true" mnemonicParsing="false" onAction="#pauseAlg" prefHeight="24.0"
-                    prefWidth="64.0" text="Pause"/>
-            <Button fx:id="nextStepButton" disable="true" mnemonicParsing="false" onAction="#nextStep" prefHeight="24.0"
-                    prefWidth="64.0" text="Next"/>
+        <HBox id="playButtonsBox">
+            <Button fx:id="prevStepButton" disable="true" mnemonicParsing="false" onAction="#prevStep"  text="Prev"/>
+            <Button fx:id="pauseAlgButton" disable="true" mnemonicParsing="false" onAction="#pauseAlg" text="Pause"/>
+            <Button fx:id="nextStepButton" disable="true" mnemonicParsing="false" onAction="#nextStep" text="Next"/>
         </HBox>
-        <HBox alignment="CENTER" prefHeight="39.0" prefWidth="1000.0">
-            <Text fx:id="info" strokeType="OUTSIDE" strokeWidth="0.0" text="Информация для пользователя">
-                <font>
-                    <Font size="20.0" />
-                </font>
+        <HBox id="infoBox">
+            <Text fx:id="info" text="Информация для пользователя">
+                <font> <Font size="20.0" /> </font>
             </Text>
         </HBox>
-        <Pane fx:id="canvasPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#onCanvasClick" prefHeight="1000.0" prefWidth="400.0"/>
+        <Pane fx:id="canvasPane" onMouseClicked="#onCanvasClick"/>
     </VBox>
 </AnchorPane>
